--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QwK-Pb-ZTE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QwK-Pb-ZTE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
@@ -393,21 +393,6 @@
             </objects>
             <point key="canvasLocation" x="51" y="-564"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="z5Y-rp-F9d">
-            <objects>
-                <viewController id="SgF-u3-sTk" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="vLl-mP-pKJ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="pYL-eo-e2k"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="e4N-lb-mjf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-501" y="-1138"/>
-        </scene>
         <!--Navigation Controller - Items-->
         <scene sceneID="bCc-yc-2D5">
             <objects>
@@ -624,6 +609,35 @@
             </objects>
             <point key="canvasLocation" x="426" y="-590"/>
         </scene>
+        <!--Guides View Controller-->
+        <scene sceneID="lXv-bf-yKo">
+            <objects>
+                <tableViewController storyboardIdentifier="GuidesVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="FaU-yd-OsX" customClass="GuidesViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="7Gy-D4-zmn">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="GuideCell" id="oCA-io-NdN">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="FaU-yd-OsX" id="2jC-P7-i08"/>
+                            <outlet property="delegate" destination="FaU-yd-OsX" id="z9m-gP-QMf"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JVK-1q-3m8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="860" y="-595"/>
+        </scene>
         <!--Detail View Controller-->
         <scene sceneID="u1w-LA-eN5">
             <objects>
@@ -642,6 +656,7 @@
                             <segments>
                                 <segment title="Info"/>
                                 <segment title="Abilities"/>
+                                <segment title="Guides"/>
                             </segments>
                             <connections>
                                 <action selector="segmentChanged:" destination="g5B-bk-5l4" eventType="valueChanged" id="0Qn-tC-UHG"/>
@@ -657,29 +672,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UoR-w6-cAg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="886" y="46"/>
-        </scene>
-        <!--Builds View Controller-->
-        <scene sceneID="NqT-gI-XV3">
-            <objects>
-                <viewController storyboardIdentifier="BuildsVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yX6-77-Mdv" customClass="BuildsViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="N4f-sI-UDf">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Builds Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jvf-B1-g98">
-                                <rect key="frame" x="88" y="136" width="144" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PPl-CN-XAe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="855" y="-596"/>
         </scene>
     </scenes>
     <resources>
@@ -739,14 +731,16 @@
                 <relationship kind="outlet" name="abilityVideo" candidateClass="UIWebView"/>
             </relationships>
         </class>
-        <class className="BuildsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildsViewController.h"/>
-        </class>
         <class className="DetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
             <relationships>
-                <relationship kind="action" name="segmentChanged:" candidateClass="UISegmentedControl"/>
                 <relationship kind="outlet" name="segment" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+        <class className="GuidesViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GuidesViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
         <class className="HeroCell" superclassName="UITableViewCell">
